fix - util class .no-scroll no longer active On tablet and Desktopt version

--- a/src/scss/base/_util.scss
+++ b/src/scss/base/_util.scss
@@ -46,6 +46,11 @@
   
 .no-scroll {
    overflow: hidden;
+
+   @include breakpoint-up('tiny') {
+
+      overflow: scroll;
+   }
 }
 
 .uppercase {
